--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>ViswaJyothi Schools</title>
+  <title>ViswaJyothi Schools - Admin</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
@@ -11,6 +11,7 @@
 		<%= render 'layouts/header'%>
 	</div>
 	<div class="container">
+		<%= render 'layouts/adminheader'%>
 		<%= yield %>
 	</div>
 	<div class="container">
