Adding travis capability

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,5 +13,6 @@
 </div>
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
+<p class="notice"><%= current_user.email unless current_user.nil?%></p>
 
  
