--- a/app/views/static_pages/contact_us.html.erb
+++ b/app/views/static_pages/contact_us.html.erb
@@ -1,2 +1,16 @@
-<h1>StaticPages#contact_us</h1>
-<p>Find me in app/views/static_pages/contact_us.html.erb</p>
+<%= render 'content' %>
+<%= form_for(@admins_message) do |f| %>
+  <div class="field">
+    <%= f.label :subject %><br>
+    <%= f.text_field :subject%>
+  </div>
+
+  <div class="textarea">
+    <%= f.label :message %><br>
+    <%= f.text_area :message, options = {length: 40} %>
+  </div>
+
+  <div class="actions">
+    <%= f.submit %>
+  </div>
+<% end %>
