--- a/app/views/admins/pages/_form.html.erb
+++ b/app/views/admins/pages/_form.html.erb
@@ -11,6 +11,16 @@
     </div>
   <% end %>
 
+  <div class="field">
+    <%= f.label :name %><br>
+    <%= f.text_field :name%>
+  </div>
+
+  <div class="textarea">
+    <%= f.label :content %><br>
+    <%= f.text_area :content %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
