--- a/app/views/admins/messages/_form.html.erb
+++ b/app/views/admins/messages/_form.html.erb
@@ -11,6 +11,16 @@
     </div>
   <% end %>
 
+  <div class="field">
+    <%= f.label :subject %><br>
+    <%= f.text_field :subject%>
+  </div>
+
+  <div class="textarea">
+    <%= f.label :message %><br>
+    <%= f.text_area :message %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
