--- a/app/views/admins/messages/index.html.erb
+++ b/app/views/admins/messages/index.html.erb
@@ -1,20 +1,23 @@
-<h1>Listing admins_messages</h1>
+<h3>Messages:</h3>
 
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th class="th span2">User Email</th>
+      <th class="th span2">Subject</th>
+      <th class="th span6">Message</th>
     </tr>
   </thead>
 
   <tbody>
     <% @admins_messages.each do |admins_message| %>
       <tr>
-        <td><%= link_to 'Show', admins_message %></td>
-        <td><%= link_to 'Edit', edit_admins_message_path(admins_message) %></td>
-        <td><%= link_to 'Destroy', admins_message, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td class="td span2"><%= getUserEmailForMessage(admins_message.user_id) %></td>
+        <td class="td span2"><%= admins_message.subject %></td>
+        <td class="td span6"><%= admins_message.message %></td>
+        <td class="td span1"><%= link_to 'Show', admins_message %></td>
+        <td class="td span1"><%= link_to 'Edit', edit_admins_message_path(admins_message) %></td>
+        <td class="td span1"><%= link_to 'Destroy', admins_message, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -22,4 +25,6 @@
 
 <br>
 
+<div class=".btn-mini">
 <%= link_to 'New Message', new_admins_message_path %>
+</div>
