--- a/app/views/admins/news/_form.html.erb
+++ b/app/views/admins/news/_form.html.erb
@@ -11,6 +11,26 @@
     </div>
   <% end %>
 
+  <div class="field">
+    <%= f.label :date %><br>
+    <%= f.datetime_select :date %>
+  </div>
+
+  <div class="textarea">
+    <%= f.label :headline %><br>
+    <%= f.text_field :headline %>
+  </div>
+
+  <div class="field">
+    <%= f.label :description %><br>
+    <%= f.text_area :description%>
+  </div>
+
+  <div class="textarea">
+    <%= f.label :news_type %><br>
+    <%= f.select(:news_type, Admins::News.news_types.map { |v| [v,v]}) %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
