--- a/app/views/admins/news/show.html.erb
+++ b/app/views/admins/news/show.html.erb
@@ -1,4 +1,24 @@
 <p id="notice"><%= notice %></p>
 
+<p>
+  <strong>Date:</strong>
+  <%= @admins_news.date %>
+</p>
+
+<p>
+  <strong>Headline:</strong>
+  <%= @admins_news.headline %>
+</p>
+
+<p>
+  <strong>Description:</strong>
+  <%= @admins_news.description %>
+</p>
+
+<p>
+  <strong>Type:</strong>
+  <%= @admins_news.news_type %>
+</p>
+
 <%= link_to 'Edit', edit_admins_news_path(@admins_news) %> |
 <%= link_to 'Back', admins_news_index_path %>
