--- a/app/views/admins/pages/index.html.erb
+++ b/app/views/admins/pages/index.html.erb
@@ -1,17 +1,18 @@
-<h1>Listing admins_pages</h1>
+<h1>Pages:</h1>
 
 <table>
   <thead>
     <tr>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th>Name</th>
+      <th>Content</th>
     </tr>
   </thead>
 
   <tbody>
     <% @admins_pages.each do |admins_page| %>
       <tr>
+        <td><%= admins_page.name %></td>
+        <td><%= admins_page.content %></td>
         <td><%= link_to 'Show', admins_page %></td>
         <td><%= link_to 'Edit', edit_admins_page_path(admins_page) %></td>
         <td><%= link_to 'Destroy', admins_page, method: :delete, data: { confirm: 'Are you sure?' } %></td>
